@@ -1050,10 +1050,10 @@
 				RelativePath="..\Languages\res\ssh.ico">
 			</File>
 			<File
-				RelativePath="..\Icons\Tortoise.ico">
+				RelativePath="..\Languages\res\Tortoise.ico">
 			</File>
 			<File
-				RelativePath="..\Languages\res\Tortoise.ico">
+				RelativePath="..\Icons\Tortoise.ico">
 			</File>
 			<File
 				RelativePath="..\Icons\Tortoise13by13.ico">
@@ -1108,6 +1108,6 @@
 			Value="0"/>
 		<Global
 			Name="RESOURCE_FILE"
-			Value="\Development\Subversion\TortoiseSVN\src\Languages\TortoiseProcENG.rc"/>
+			Value="\Development\Svn\TortoiseSVN\src\Languages\TortoiseProcENG.rc"/>
 	</Globals>
 </VisualStudioProject>
